Recommendation system now iterates through user genre preference list instead of just picking the first one.